# irori

./: .gitignore  LICENSE  README.md  README.zh-CN.md  design-qa.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: release.yml
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/preview/: index.html  styles.css
apps/desktop/scripts/: prepare-sidecar.mjs
apps/desktop/sidecar/: package.json
apps/desktop/src/: App.tsx  main.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  node-entitlements.plist  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/resources/: .gitignore
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/local-agent/: package.json
apps/site/: index.html  next.config.ts  package.json  tsconfig.json  vercel.json
characters/: manifest.json
characters/cenji.card/: README.md  card.json
characters/lulin.card/: README.md  card.json
characters/sakuramio.card/: README.md  card.json
characters/shenyanzhou.card/: README.md  card.json
characters/shili.card/: README.md  card.json
characters/tangyuan.card/: README.md  card.json
docs/: README.md  character-card-authoring.md  pi-provider-routing.md
docs/plans/: 2026-05-30-cenji-character-card.md  2026-05-30-sakuramio-character-card.md  2026-05-30-tangyuan-character-card.md  2026-05-31-companion-state-and-multi-character.md  2026-06-03-pi-web-access-webui.md  character-schedule-design.md  character-skills-design.md  subagents-tool-gate-design.md
(+199 files in other folders)
