[package]
name = "cockapoo-pi-companion"
version = "0.1.0"
description = "Cockapoo Pi Companion desktop shell"
authors = ["Cockapoo"]
edition = "2021"

[lib]
name = "cockapoo_pi_companion_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["clock"] }
cron = "0.12"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
